Fix elements and styles in HTML, CSS respectively
Add meta tag to HTML file
Add padding and margin to elements

--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Card</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container" id="container">
         <div class="recipe-card feature">
-            <img src="images/cupcake.webp" alt="Cupcake credit:pexels.com">
+            <img 
+            src="images/cupcake.webp" 
+            alt="Cupcake credit:pexels.com"
+            >
             <div class="recipe-content">
                 <h1>Chocolate Cupcake</h1>
-                <p>When you make cupcakes, you mix up cake batter and instead of baking it in large pans, pour it into the small, paper-lined indentations in a cupcake or muffin pan. Some people prefer cupcakes to cakes, because they're the perfect serving size. In Britain and Australia, cupcakes are called "fairy cakes." Cupcake is an American English word dating from the 19th century.</p>
+                <p class="description">When you make cupcakes, you mix up cake batter and instead of baking it in large pans, pour it into the small, paper-lined indentations in a cupcake or muffin pan. Some people prefer cupcakes to cakes, because they're the perfect serving size. In Britain and Australia, cupcakes are called "fairy cakes." Cupcake is an American English word dating from the 19th century.</p>
                 <section class="recipe-info">
                     <ul>
                         <li class="recipe-prep-time">
