--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 </head>
 <body>
     <div class="recipe-card feature">
-        <img src="images/cupcake.webp" alt="Cupcake credit:pexels.com">
+        <img src="images/cupcake.jpg" alt="Cupcake credit:pexels.com">
         <div class="recipe-content">
             <h1>Chocolate Cupcake</h1>
             <p class="description">When you make cupcakes, you mix up cake batter and instead of baking it in large pans, pour it into the small, paper-lined indentations in a cupcake or muffin pan. Some people prefer cupcakes to cakes, because they're the perfect serving size. In Britain and Australia, cupcakes are called "fairy cakes." Cupcake is an American English word dating from the 19th century.</p>
             <section class="recipe-info">
                 <ul>
                     <li class="recipe-prep-time">
-                        <h2>Preparation Time</h2><p>30 mins</p>
+                        <h3>Preparation Time</h2><p>30 mins</p>
                     </li>
                     <li>
-                        <h2>Total Time</h2><p>40 min</p> 
+                        <h3>Total Time</h2><p>40 min</p> 
                     </li>
                     <li>
-                        <h2>Yield</h2><p>40 mins</p>
+                        <h3>Yield</h2><p>40 mins</p>
                     </li>
                 </ul>
             </section>
+            <a href="https://sugargeekshow.com/recipe/chocolate-cupcake-recipe/" target="_blank" rel="noopener norefferrer">View recipe</a>
         </div>
-        <a href="https://sugargeekshow.com/recipe/chocolate-cupcake-recipe/" target="_blank" rel="noopener norefferrer">View recipe</a>    
+            
     </div>
 </body>
 </html>
